Fix scrollbar bug

--- a/public/stylesheets/watch.css
+++ b/public/stylesheets/watch.css
@@ -19,7 +19,7 @@ video {
 
   video {
     max-height: 75vh;
-    width: 100vw;
+    width: 100%;
   }
 
   #video-info {
